--- a/index.html
+++ b/index.html
@@ -4,11 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script>
-        import {add,sub} from "./dist/index.js"
-
-        document.body.innerHTML = `<h1>${add(10,67)}</h1>`
-    </script>
+    <script src="./main.js" type="module"></script>
 </head>
 <body>
     <p>Yes it works somehow</p>
